--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -62,6 +62,7 @@
         <h4 class="selection__titre">Notre sélection</h4>
         <p class="selection__date">30 octobre à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
 
+    <div class="selection__card">
         <a class="selection__item" href="FilmMonsieurJack.html">
             <img class="selection__image" src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
         </a>
@@ -69,7 +70,9 @@
         <p class="selection__debut">Début : 16h00</p>
         <p class="selection__duree">Durée : 1h16</p>
         <p class="selection__age">À partir de 6 - 7 ans</p>
+    </div>
 
+    <div class="selection__card">
         <a class="selection__item" href="FilmCasper.html">
             <img class="selection__image" src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
         </a>
@@ -77,7 +80,9 @@
         <p class="selection__debut">Début : 17h20</p>
         <p class="selection__duree">Durée : 1h36</p>
         <p class="selection__age">À partir de 6 ans</p>
+    </div>
 
+    <div class="selection__card">
         <a class="selection__item" href="FilmAddams.html">
             <img class="selection__image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
         </a>
@@ -85,7 +90,9 @@
         <p class="selection__debut">Début : 19h00</p>
         <p class="selection__duree">Durée : 1h27</p>
         <p class="selection__age">À partir de 7 - 8 ans</p>
+    </div>
 
+    <div class="selection__card">
         <a class="selection__item" href="FilmScooby.html">
             <img class="selection__image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
         </a>
@@ -93,7 +100,9 @@
         <p class="selection__debut">Début : 20h30</p>
         <p class="selection__duree">Durée : 1h20</p>
         <p class="selection__age">À partir de 9 ans</p>
+    </div>
 
+    <div class="selection__card">
         <a class="selection__item" href="FilmHocusPocus.html">
           <img class="selection__image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
         </a>
@@ -101,7 +110,9 @@
         <p class="selection__debut">Début : 21h50</p>
         <p class="selection__duree">Durée : 1h36</p>
         <p class="selection__age">À partir de 9 ans</p>
+    </div>
 
+    <div class="selection__card">
         <a class="selection__item" href="FilmHorloge.html">
             <img class="selection__image" src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
         </a>
@@ -109,7 +120,7 @@
         <p class="selection__debut">Début : 23h30</p>
         <p class="selection__duree">Durée : 1h40</p>
         <p class="selection__age">À partir de 11 ans</p>
-
+    </div>
 </section>
 
 <footer class="footer">
