--- a/Filmanimaltronix.html
+++ b/Filmanimaltronix.html
@@ -89,18 +89,20 @@
         et pleine de tension alors que Mike tente de comprendre et d'échapper à ces créatures mécaniques meurtrières.</p>
         </section>
 
-      <footer class="footer">
-          <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-          <div class="footer__links">
-              <p>Mentions légales</p>
-              <p>Politique de confidentialité</p>
-          </div>
-          <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b6844111.svg" alt="Image chaudron de sorcière">
-          <div class="footer__social">
-              <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-              <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-              <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-          </div>
-      </footer>
+ <footer class="footer">
+  <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+  <div class="footer__links">
+      <p>Mentions légales</p>
+      <p>Politique de confidentialité</p>
+  </div>
+  <div class="footer__align">
+    <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b6844111.svg" alt="Image chaudron de sorcière">
+    <div class="footer__social">
+        <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+        <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+        <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+    </div>
+  </div>
+</footer>
 </body>
 </html>
