--- a/ProgrammeAdulte.html
+++ b/ProgrammeAdulte.html
@@ -67,7 +67,7 @@
 
     <div class="selection__card">
         <a class="selection__item" href="FilmShinning.html">
-        <img class="selection__image" src="/assets/img/Film/filmshinning.jpg" alt="Film Shinning">
+        <img class="selection__image" src="/assets/img/Film/ShinningFILM.svg" alt="Film Shinning">
         </a>
         <p class="selection__nom">Shinning, de Stanley Kubrick</p>
         <p class="selection__debut">Début : 18h00</p>
@@ -76,7 +76,7 @@
 
     <div class="selection__card">
         <a class="selection__item" href="Filmanimaltronix.html">
-      <img class="selection__image" src="/assets/img/Film/filmanimaltronix.webp" alt="Film Five Nights at Freddy's">
+      <img class="selection__image" src="/assets/img/Film/AnimaltronixFILM.svg" alt="Film Five Nights at Freddy's">
         </a>
         <p class="selection__nom">Five Nights at Freddy's, de Emma Tammi</p>
         <p class="selection__debut">Début : 20h30</p>
@@ -85,7 +85,7 @@
 
     <div class="selection__card">
         <a class="selection__item" href="FilmFreddy.html">
-        <img class="selection__image" src="/assets/img/Film/filmfreddy.webp" alt="Film Les Griffes de la nuit">
+        <img class="selection__image" src="/assets/img/Film/GriffeFILM.svg" alt="Film Les Griffes de la nuit">
         </a>
         <p class="selection__nom">Les Griffes de la nuit, de Wes Craven</p>
         <p class="selection__debut">Début : 22h25</p>
@@ -94,7 +94,7 @@
 
     <div class="selection__card">
         <a class="selection__item" href="FilmConjuring.html">
-        <img class="selection__image" src="/assets/img/Film/Filmconjuring.svg" alt="Film Conjuring, les dossiers Warren">
+        <img class="selection__image" src="/assets/img/Film/ConjuringFILM.svg" alt="Film Conjuring, les dossiers Warren">
         </a>
         <p class="selection__nom">Conjuring, les dossiers Warren, de James Wan</p>
         <p class="selection__debut">Début : 00h00</p>
@@ -103,7 +103,7 @@
 
     <div class="selection__card">
         <a class="selection__lien" href="FilmPalaisdurire.html">
-        <img class="selection-films__image" src="/assets/img/Film/filmpalaisdurire.jpg" alt="Film Massacre au palais du rire">
+        <img class="selection-films__image" src="/assets/img/Film/PalaisFILM.svg" alt="Film Massacre au palais du rire">
         </a>
         <p class="selection__nom">Massacre au palais du rire, de Andy Palmer</p>
         <p class="selection__debut">Début : 1h55</p>
@@ -112,7 +112,7 @@
 
 <div class="selection__card">
   <a class="selection__lien" href="FilmCa.html">
-      <img class="selection__image" src="/assets/img/Film/filmça.webp" alt="Film Ça">
+      <img class="selection__image" src="/assets/img/Film/CaFILM.svg" alt="Film Ça">
   </a>
   <p class="selection__nom">Ça, de Andy Muschietti</p>
   <p class="selection__debut">Début : 3h30</p>
@@ -121,18 +121,20 @@
 </section>
 
 <footer class="footer">
-  <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
-  <div class="footer__links">
-      <p>Mentions légales</p>
-      <p>Politique de confidentialité</p>
-  </div>
-  <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b6844111.svg" alt="Image chaudron de sorcière">
-  <div class="footer__social">
-      <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
-      <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
-      <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
-  </div>
-</footer>
+    <img class="footer__logo" src="/assets/icons/logocitrouille1.svg" alt="Logo Festiv'Halloween">
+    <div class="footer__links">
+        <p>Mentions légales</p>
+        <p>Politique de confidentialité</p>
+    </div>
+    <div class="footer__align">
+      <img class="footer__image" src="/assets/img/Footer/3ac5e1e36b01036458b8e3537b6844111.svg" alt="Image chaudron de sorcière">
+      <div class="footer__social">
+          <img src="/assets/icons/logo-tiktok.svg" alt="Logo TikTok">
+          <img src="/assets/icons/logo-instagram.svg" alt="Logo Instagram">
+          <img src="/assets/icons/logo-facebook.svg" alt="Logo Facebook">
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
