--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -62,64 +62,69 @@
         <h4 class="selection__titre">Notre sélection</h4>
         <p class="selection__date">30 octobre à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmMonsieurJack.html">
+    <div class="carousel">
+        <button class="carousel__btn carousel__btn--prev">&lt;</button>
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmMonsieurJack.html">
             <img class="selection__image" src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
-        </a>
-        <p class="selection__nom">L’étrange Noël de Monsieur Jack, de Henry Selick</p>
-        <p class="selection__debut">Début : 16h00</p>
-        <p class="selection__duree">Durée : 1h16</p>
-        <p class="selection__age">À partir de 6 - 7 ans</p>
-    </div>
+            </a>
+            <p class="selection__nom">L’étrange Noël de Monsieur Jack, de Henry Selick</p>
+            <p class="selection__debut">Début : 16h00</p>
+            <p class="selection__duree">Durée : 1h16</p>
+            <p class="selection__age">À partir de 6 - 7 ans</p>
+        </div>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmCasper.html">
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmCasper.html">
             <img class="selection__image" src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
-        </a>
-        <p class="selection__nom">Casper, de Brad Silberling</p>
-        <p class="selection__debut">Début : 17h20</p>
-        <p class="selection__duree">Durée : 1h36</p>
-        <p class="selection__age">À partir de 6 ans</p>
-    </div>
+            </a>
+            <p class="selection__nom">Casper, de Brad Silberling</p>
+            <p class="selection__debut">Début : 17h20</p>
+            <p class="selection__duree">Durée : 1h36</p>
+            <p class="selection__age">À partir de 6 ans</p>
+        </div>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmAddams.html">
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmAddams.html">
             <img class="selection__image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
-        </a>
-        <p class="selection__nom">La famille Addams, de Conrad Vernon et Gerg Tiernan</p>
-        <p class="selection__debut">Début : 19h00</p>
-        <p class="selection__duree">Durée : 1h27</p>
-        <p class="selection__age">À partir de 7 - 8 ans</p>
-    </div>
+            </a>
+            <p class="selection__nom">La famille Addams, de Conrad Vernon et Gerg Tiernan</p>
+            <p class="selection__debut">Début : 19h00</p>
+            <p class="selection__duree">Durée : 1h27</p>
+            <p class="selection__age">À partir de 7 - 8 ans</p>
+        </div>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmScooby.html">
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmScooby.html">
             <img class="selection__image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
-        </a>
-        <p class="selection__nom">Joyeux Halloween, Scooby-Doo ! de Maxwell Atoms</p>
-        <p class="selection__debut">Début : 20h30</p>
-        <p class="selection__duree">Durée : 1h20</p>
-        <p class="selection__age">À partir de 9 ans</p>
-    </div>
+            </a>
+            <p class="selection__nom">Joyeux Halloween, Scooby-Doo ! de Maxwell Atoms</p>
+            <p class="selection__debut">Début : 20h30</p>
+            <p class="selection__duree">Durée : 1h20</p>
+            <p class="selection__age">À partir de 9 ans</p>
+        </div>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmHocusPocus.html">
-          <img class="selection__image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
-        </a>
-        <p class="selection__nom">Hocus Pocus, de Kenny Ortega</p>
-        <p class="selection__debut">Début : 21h50</p>
-        <p class="selection__duree">Durée : 1h36</p>
-        <p class="selection__age">À partir de 9 ans</p>
-    </div>
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmHocusPocus.html">
+            <img class="selection__image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
+            </a>
+            <p class="selection__nom">Hocus Pocus, de Kenny Ortega</p>
+            <p class="selection__debut">Début : 21h50</p>
+            <p class="selection__duree">Durée : 1h36</p>
+            <p class="selection__age">À partir de 9 ans</p>
+        </div>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmHorloge.html">
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmHorloge.html">
             <img class="selection__image" src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
-        </a>
-        <p class="selection__nom">La Prophétie de l'horloge, de Eli Roth</p>
-        <p class="selection__debut">Début : 23h30</p>
-        <p class="selection__duree">Durée : 1h40</p>
-        <p class="selection__age">À partir de 11 ans</p>
+            </a>
+            <p class="selection__nom">La Prophétie de l'horloge, de Eli Roth</p>
+            <p class="selection__debut">Début : 23h30</p>
+            <p class="selection__duree">Durée : 1h40</p>
+            <p class="selection__age">À partir de 11 ans</p>
+        </div>
+        <button class="carousel__btn carousel__btn--next">&gt;</button>
+</div>
     </div>
 </section>
 
