--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </script>
         <ul class="header__menu-list">
             <li class="header__menu-item">
-                <a class="header__menu-link" href="billetterie.html">Billetterie</a>
+                <a class="header__menu-link" href="/billetterie.html">Billetterie</a>
             </li>
             <li class="header__menu-item">
-                <a class="header__menu-link" href="ProgrammeAdulte.html">Programmation pour adultes</a>
+                <a class="header__menu-link" href="/ProgrammeAdulte.html">Programmation pour adultes</a>
             </li>
             <li class="header__menu-item">
                 <a class="header__menu-link" href="ProgrammeEnfant.html">Programmation pour enfants</a>
