--- a/ProgrammeAdulte.html
+++ b/ProgrammeAdulte.html
@@ -65,59 +65,63 @@
   <h4 class="selection__titre">Notre sélection</h4>
   <p class="selection__date">29 octobre  à partir de 18h00 jusqu’au 30 octobre à 5h30</p>
 
-    <div class="selection__card">
-        <a class="selection__item" href="FilmShinning.html">
-        <img class="selection__image" src="/assets/img/Film/ShinningFILM.svg" alt="Film Shinning">
-        </a>
-        <p class="selection__nom">Shinning, de Stanley Kubrick</p>
-        <p class="selection__debut">Début : 18h00</p>
-        <p class="selection__duree">Durée : 2h26</p>
+  <div class="carousel">
+    <button class="carousel__btn carousel__btn--prev">&lt;</button>
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmShinning.html">
+            <img class="selection__image" src="/assets/img/Film/ShinningFILM.svg" alt="Film Shinning">
+            </a>
+            <p class="selection__nom">Shinning, de Stanley Kubrick</p>
+            <p class="selection__debut">Début : 18h00</p>
+            <p class="selection__duree">Durée : 2h26</p>
+        </div>
+
+        <div class="carousel__item">
+            <a class="selection__item" href="Filmanimaltronix.html">
+        <img class="selection__image" src="/assets/img/Film/AnimaltronixFILM.svg" alt="Film Five Nights at Freddy's">
+            </a>
+            <p class="selection__nom">Five Nights at Freddy's, de Emma Tammi</p>
+            <p class="selection__debut">Début : 20h30</p>
+            <p class="selection__duree">Durée : 1h50</p>
+        </div>
+
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmFreddy.html">
+            <img class="selection__image" src="/assets/img/Film/GriffeFILM.svg" alt="Film Les Griffes de la nuit">
+            </a>
+            <p class="selection__nom">Les Griffes de la nuit, de Wes Craven</p>
+            <p class="selection__debut">Début : 22h25</p>
+            <p class="selection__duree">Durée : 1h30</p>
+        </div>
+
+        <div class="carousel__item">
+            <a class="selection__item" href="FilmConjuring.html">
+            <img class="selection__image" src="/assets/img/Film/ConjuringFILM.svg" alt="Film Conjuring, les dossiers Warren">
+            </a>
+            <p class="selection__nom">Conjuring, les dossiers Warren, de James Wan</p>
+            <p class="selection__debut">Début : 00h00</p>
+            <p class="selection__duree">Durée : 1h52</p>
+        </div>
+
+        <div class="carousel__item">
+            <a class="selection__lien" href="FilmPalaisdurire.html">
+            <img class="selection-films__image" src="/assets/img/Film/PalaisFILM.svg" alt="Film Massacre au palais du rire">
+            </a>
+            <p class="selection__nom">Massacre au palais du rire, de Andy Palmer</p>
+            <p class="selection__debut">Début : 1h55</p>
+            <p class="selection__duree">Durée : 1h30</p>
+        </div> 
+
+        <div class="carousel__item">
+            <a class="selection__lien" href="FilmCa.html">
+            <img class="selection__image" src="/assets/img/Film/CaFILM.svg" alt="Film Ça">
+            </a>
+            <p class="selection__nom">Ça, de Andy Muschietti</p>
+            <p class="selection__debut">Début : 3h30</p>
+            <p class="selection__duree">Durée : 2h12</p>
+        </div>
+        <button class="carousel__btn carousel__btn--next">&gt;</button>
     </div>
-
-    <div class="selection__card">
-        <a class="selection__item" href="Filmanimaltronix.html">
-      <img class="selection__image" src="/assets/img/Film/AnimaltronixFILM.svg" alt="Film Five Nights at Freddy's">
-        </a>
-        <p class="selection__nom">Five Nights at Freddy's, de Emma Tammi</p>
-        <p class="selection__debut">Début : 20h30</p>
-        <p class="selection__duree">Durée : 1h50</p>
-    </div>
-
-    <div class="selection__card">
-        <a class="selection__item" href="FilmFreddy.html">
-        <img class="selection__image" src="/assets/img/Film/GriffeFILM.svg" alt="Film Les Griffes de la nuit">
-        </a>
-        <p class="selection__nom">Les Griffes de la nuit, de Wes Craven</p>
-        <p class="selection__debut">Début : 22h25</p>
-        <p class="selection__duree">Durée : 1h30</p>
-    </div>
-
-    <div class="selection__card">
-        <a class="selection__item" href="FilmConjuring.html">
-        <img class="selection__image" src="/assets/img/Film/ConjuringFILM.svg" alt="Film Conjuring, les dossiers Warren">
-        </a>
-        <p class="selection__nom">Conjuring, les dossiers Warren, de James Wan</p>
-        <p class="selection__debut">Début : 00h00</p>
-        <p class="selection__duree">Durée : 1h52</p>
-    </div>
-
-    <div class="selection__card">
-        <a class="selection__lien" href="FilmPalaisdurire.html">
-        <img class="selection-films__image" src="/assets/img/Film/PalaisFILM.svg" alt="Film Massacre au palais du rire">
-        </a>
-        <p class="selection__nom">Massacre au palais du rire, de Andy Palmer</p>
-        <p class="selection__debut">Début : 1h55</p>
-        <p class="selection__duree">Durée : 1h30</p>
-    </div> 
-
-<div class="selection__card">
-  <a class="selection__lien" href="FilmCa.html">
-      <img class="selection__image" src="/assets/img/Film/CaFILM.svg" alt="Film Ça">
-  </a>
-  <p class="selection__nom">Ça, de Andy Muschietti</p>
-  <p class="selection__debut">Début : 3h30</p>
-  <p class="selection__duree">Durée : 2h12</p>
-</div>
 </section>
 
 <footer class="footer">
