--- a/ProgrammeEnfant.html
+++ b/ProgrammeEnfant.html
@@ -61,10 +61,10 @@
 <section class="selection">
         <h4 class="selection__titre">Notre sélection</h4>
         <p class="selection__date">30 octobre à partir de 17h00 jusqu’au 31 octobre à 00h30</p>
+    <button class="carousel__btn carousel__btn--prev">&lt;</button>
 
     <div class="carousel">
-        <button class="carousel__btn carousel__btn--prev">&lt;</button>
-        <div class="carousel__item">
+        <div class="carousel__item_enfant">
             <a class="selection__item" href="FilmMonsieurJack.html">
             <img class="selection__image" src="/assets/img/Film/filmjack.svg" alt="Film L’étrange Noël de Monsieur Jack">
             </a>
@@ -74,7 +74,7 @@
             <p class="selection__age">À partir de 6 - 7 ans</p>
         </div>
 
-        <div class="carousel__item">
+        <div class="carousel__item_enfant">
             <a class="selection__item" href="FilmCasper.html">
             <img class="selection__image" src="/assets/img/Film/filmcasper.webp" alt="Film Casper">
             </a>
@@ -84,7 +84,7 @@
             <p class="selection__age">À partir de 6 ans</p>
         </div>
 
-        <div class="carousel__item">
+        <div class="carousel__item_enfant">
             <a class="selection__item" href="FilmAddams.html">
             <img class="selection__image" src="/assets/img/Film/filmaddams.webp" alt="Film La famille Addams">
             </a>
@@ -94,7 +94,7 @@
             <p class="selection__age">À partir de 7 - 8 ans</p>
         </div>
 
-        <div class="carousel__item">
+        <div class="carousel__item_enfant">
             <a class="selection__item" href="FilmScooby.html">
             <img class="selection__image" src="/assets/img/Film/filmscooby.jpg" alt="Film Joyeux Halloween, Scooby-Doo !">
             </a>
@@ -104,7 +104,7 @@
             <p class="selection__age">À partir de 9 ans</p>
         </div>
 
-        <div class="carousel__item">
+        <div class="carousel__item_enfant">
             <a class="selection__item" href="FilmHocusPocus.html">
             <img class="selection__image" src="/assets/img/Film/filmhocuspocus.jpeg" alt="Film Hocus Pocus">
             </a>
@@ -114,7 +114,7 @@
             <p class="selection__age">À partir de 9 ans</p>
         </div>
 
-        <div class="carousel__item">
+        <div class="carousel__item_enfant">
             <a class="selection__item" href="FilmHorloge.html">
             <img class="selection__image" src="/assets/img/Film/filmhorloge.jpeg" alt="Film La Prophétie de l'horloge">
             </a>
@@ -123,9 +123,10 @@
             <p class="selection__duree">Durée : 1h40</p>
             <p class="selection__age">À partir de 11 ans</p>
         </div>
-        <button class="carousel__btn carousel__btn--next">&gt;</button>
-</div>
+        
     </div>
+    <button class="carousel__btn carousel__btn--next">&gt;</button>
+    
 </section>
 
 <footer class="footer">
