lightbox JS + CSS + HTML

--- a/ProgrammeAdulte.html
+++ b/ProgrammeAdulte.html
@@ -6,6 +6,8 @@
     <title>Programme pour adultes</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
     <script type="module" src="/src/js/menu.js"></script>
+    <script type="module" src="/src/js/carrousel.js"></script>
+    <link rel="icon" href="/assets/icons/logocitrouille1.svg" type="image/svg+xml">
 
 </head>
 
