--- a/Andypalmer.html
+++ b/Andypalmer.html
@@ -6,6 +6,7 @@
     <title>Andy Palmer</title>
     <link rel="stylesheet" href="/src/css/"/>
     <script type="module" src="/src/js/menu.js"></script>
+    <link rel="icon" href="/assets/icons/logocitrouille1.svg" type="image/svg+xml">
 
 </head>
 
