--- a/JamesWan.html
+++ b/JamesWan.html
@@ -6,6 +6,7 @@
     <title>James Wan</title>
     <link rel="stylesheet" href="/src/css/style.css"/>
     <script type="module" src="/src/js/menu.js"></script>
+    <link rel="icon" href="/assets/icons/logocitrouille1.svg" type="image/svg+xml">
 
 </head>
 
